parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__numeric-hexadecimal-0.snap
---
source: parser/src/lexer/lexer.rs
description: "0x0"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0x0",
        ),
        start: 0,
        end: 3,
    },
]
