parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__numeric-hexadecimal-10.snap
---
source: parser/src/lexer/mod.rs
description: "0xa"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xa",
        ),
        start: 0,
        end: 3,
    },
]
