parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__numeric-hexadecimal-12.snap
---
source: parser/src/lexer/mod.rs
description: "0xc"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xc",
        ),
        start: 0,
        end: 3,
    },
]
