parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__numeric-hexadecimal-13.snap
---
source: parser/src/lexer/mod.rs
description: "0xd"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xd",
        ),
        start: 0,
        end: 3,
    },
]
