parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__numeric-hexadecimal-14.snap
---
source: parser/src/lexer/mod.rs
description: "0xe"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xe",
        ),
        start: 0,
        end: 3,
    },
]
