parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__numeric-hexadecimal-15.snap
---
source: parser/src/lexer/mod.rs
description: "0xf"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xf",
        ),
        start: 0,
        end: 3,
    },
]
