parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__numeric-hexadecimal-16.snap
---
source: parser/src/lexer/mod.rs
description: "0xA"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xA",
        ),
        start: 0,
        end: 3,
    },
]
