parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__numeric-hexadecimal-17.snap
---
source: parser/src/lexer/mod.rs
description: "0xB"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xB",
        ),
        start: 0,
        end: 3,
    },
]
